force-app/main/default/objects/Clinical_Audit__c/Clinical_Audit__c.object-meta.xml
<CustomObject>
    <label>Audit</label>
    <nameField>
        <label>Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>