force-app/main/default/objects/Clinical_Audit__c/fields/Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>Audit_Type__c</fullName>
    <label>Audit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Audit</fullName>
            </value>
            <value>
                <fullName>Procedural Audit</fullName>
            </value>
            <value>
                <fullName>Audit (LEGACY)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>