force-app/main/default/objects/Clinical_Audit__c/fields/Auditee__c.field-meta.xml
<CustomField>
    <fullName>Auditee__c</fullName>
    <formula>Clinician__r.enrtcr__User__r.Id == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auditee</label>
    <type>Checkbox</type>
</CustomField>