force-app/main/default/objects/Clinical_Audit__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clinical_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>