force-app/main/default/objects/Clinical_Audit__c/fields/BreakdownJSON__c.field-meta.xml
<CustomField>
    <fullName>BreakdownJSON__c</fullName>
    <label>BreakdownJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>