force-app/main/default/objects/Clinical_Audit__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Clinical_Audits1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>