force-app/main/default/objects/Clinical_Audit__c/fields/Clinical_Area__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Area__c</fullName>
    <label>Clinical Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OT – AT</fullName>
            </value>
            <value>
                <fullName>OT – Home Modifications</fullName>
            </value>
            <value>
                <fullName>OT –  Therapy</fullName>
            </value>
            <value>
                <fullName>OT –  SIL/SDA</fullName>
            </value>
            <value>
                <fullName>PT – AT</fullName>
            </value>
            <value>
                <fullName>SP – Voice</fullName>
            </value>
            <value>
                <fullName>SP – Social Skills</fullName>
            </value>
            <value>
                <fullName>SP – Language</fullName>
            </value>
            <value>
                <fullName>SP – Speech</fullName>
            </value>
            <value>
                <fullName>SP – AAC</fullName>
            </value>
            <value>
                <fullName>SP – Dysphagia</fullName>
            </value>
            <value>
                <fullName>SP – Fluency</fullName>
            </value>
            <value>
                <fullName>PBS – Assessment and implementation</fullName>
            </value>
            <value>
                <fullName>PBS – Psychology assessment and therapy</fullName>
            </value>
            <value>
                <fullName>OT – Intervention planning</fullName>
            </value>
            <value>
                <fullName>PT – Ortho</fullName>
            </value>
            <value>
                <fullName>PT/EP – Assessment</fullName>
            </value>
            <value>
                <fullName>PT/EP – Intervention</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>PBS – Restrictive Practices</fullName>
                <isActive>false</isActive>
                <label>PBS – Restrictive Practices</label>
            </value>
            <value>
                <fullName>PT – Hydrotherapy</fullName>
                <isActive>false</isActive>
                <label>PT – Hydrotherapy</label>
            </value>
            <value>
                <fullName>PT – Neuro</fullName>
                <isActive>false</isActive>
                <label>PT – Neuro</label>
            </value>
            <value>
                <fullName>PT – Paediatrics</fullName>
                <isActive>false</isActive>
                <label>PT – Paediatrics</label>
            </value>
            <value>
                <fullName>PT – Respiratory</fullName>
                <isActive>false</isActive>
                <label>PT – Respiratory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>