force-app/main/default/objects/Clinical_Audit__c/fields/Clinician__c.field-meta.xml
<CustomField>
    <fullName>Clinician__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Clinician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Clinical_Audits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>