force-app/main/default/objects/Clinical_Audit__c/fields/Custom_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Custom_Record_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Custom Record ID</label>
    <type>Text</type>
</CustomField>