force-app/main/default/objects/Clinical_Audit__c/fields/Denominator__c.field-meta.xml
<CustomField>
    <fullName>Denominator__c</fullName>
    <label>Denominator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>