force-app/main/default/objects/Clinical_Audit__c/fields/Improvements__c.field-meta.xml
<CustomField>
    <fullName>Improvements__c</fullName>
    <label>Improvements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>