force-app/main/default/objects/Clinical_Audit__c/fields/Is_Direct_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Is_Direct_Supervisor__c</fullName>
    <formula>IF( Clinician__r.Direct_Supervisor__r.enrtcr__User__c = $User.Id , TRUE, FALSE)</formula>
    <inlineHelpText>TRUE if the currently logged in user is the clinician&apos;s direct supervisor</inlineHelpText>
    <label>Is Direct Supervisor?</label>
    <type>Checkbox</type>
</CustomField>