force-app/main/default/objects/Clinical_Audit__c/fields/KPI_Period__c.field-meta.xml
<CustomField>
    <fullName>KPI_Period__c</fullName>
    <formula>CEILING(( DATEVALUE( CreatedDate  ) - DATE( 2021, 7, 4))/28)</formula>
    <label>KPI Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>