force-app/main/default/objects/Clinical_Audit__c/fields/Numerator__c.field-meta.xml
<CustomField>
    <fullName>Numerator__c</fullName>
    <label>Numerator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>