force-app/main/default/objects/Clinical_Audit__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>Numerator__c /  Denominator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>