force-app/main/default/objects/Clinical_Audit__c/fields/Sections__c.field-meta.xml
<CustomField>
    <fullName>Sections__c</fullName>
    <label>Sections</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>