force-app/main/default/objects/Clinical_Audit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONFORMS</fullName>
            </value>
            <value>
                <fullName>DOES NOT CONFORM</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
                <isActive>false</isActive>
                <label>FAIL</label>
            </value>
            <value>
                <fullName>PASS</fullName>
                <isActive>false</isActive>
                <label>PASS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>