force-app/main/default/objects/Clinical_Audit__c/fields/Supervision_SDE__c.field-meta.xml
<CustomField>
    <fullName>Supervision_SDE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervision SDE</label>
    <referenceTo>enrtcr__Support_Delivered__c</referenceTo>
    <relationshipName>Clinical_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>