force-app/main/default/objects/Clinical_Audit__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Auditor__c</columns>
    <columns>Clinician__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Auditee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Received Audits</label>
</ListView>