force-app/main/default/objects/Clinical_Audit__c/listViews/My_Completed_Audits.listView-meta.xml
<ListView>
    <fullName>My_Completed_Audits</fullName>
    <columns>NAME</columns>
    <columns>Auditor__c</columns>
    <columns>Clinician__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Completed Audits</label>
</ListView>