force-app/main/default/objects/Clinical_Audit__c/listViews/Tegan_Pearce_Audit_Results.listView-meta.xml
<ListView>
    <fullName>Tegan_Pearce_Audit_Results</fullName>
    <columns>NAME</columns>
    <columns>Auditor__c</columns>
    <columns>Clinician__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Time_Taken__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Clinician__c</field>
        <operation>equals</operation>
        <value>Penny Smith</value>
    </filters>
    <label>Tegan Pearce Audit Results</label>
    <sharedTo>
        <group>Clinical_Audit_RM_and_SM</group>
    </sharedTo>
</ListView>